src/test/deca/context/valid/distributivite.deca
// Contextual test, arithmetic calculation assigned to x

{
  int x = 2 * (1 + 3);
}
