src/test/deca/context/invalid/no_new_line_declaration.deca
// Déclaration de variable sur la même ligne

{
  int x = 1; int y = 2;
}
